--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       DB_HOST: postgre_db
     networks:
       - my_network
-    depends_on:
+    depends_on:    
       - postgre_db
       - redis
   postgre_db:
@@ -22,7 +22,7 @@ services:
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_USER: ${DB_USER}
     restart: unless-stopped
     networks:
       - my_network
