--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Задание 1",
+  "name": "program",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -27,6 +27,8 @@
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
